--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
-body{
-    background-color: rgb(139, 224, 99);
+#container { 
+        border:2px solid grey;
+         width:360px;
+         margin: 0 auto;
+         }
+
+.done{
+    text-decoration: line-through;
+    color: grey;
 }
