--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,11 @@
 body {
     font-family: 'Roboto', sans-serif;
-}
-
-#container {
-    width: 360px;
-    margin: 100px auto;
-    background-color: #f7f7f7;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1)
-}
-
-.done {
-    text-decoration: line-through;
-    color: grey;
+    background: #D38312;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #A83279, #D38312);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #A83279, #D38312);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 ul {
@@ -42,16 +36,50 @@ h1 {
 }
 
 input {
-    font-size:18px;
-    background-color:#f7f7f7;
-    width:100%;
+    font-size: 18px;
+    background-color: #f7f7f7;
+    width: 100%;
     padding: 13px 13px 13px 20px;
-    box-sizing:border-box;
-    color:#2980b9;
+    box-sizing: border-box;
+    color: #2980b9;
+    border: 3px solid rgba(0, 0, 0, 0);
 }
 
-input:focus{
-    background:#fff;
-    border:3px solid #2980b9;;
-    outline:none;
+input:focus {
+    background: #fff;
+    border: 3px solid #2980b9;
+    outline: none;
+}
+
+li span {
+    background: #e74c3c;
+    height: 40px;
+    margin-right: 20px;
+    text-align: center;
+    color: white;
+    width: 0;
+    display: inline-block;
+    transition: 0.2s linear;
+    opacity: 0;
+}
+
+li:hover span {
+    width: 40px;
+    opacity: 1.0;
+}
+
+.fa-plus {
+    float: right;
+}
+
+#container {
+    width: 360px;
+    margin: 100px auto;
+    background-color: #f7f7f7;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1)
+}
+
+.done {
+    text-decoration: line-through;
+    color: grey;
 }
