--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,3 +83,9 @@ li:hover span {
     text-decoration: line-through;
     color: grey;
 }
+
+@media screen and (max-width:468px) {
+    #container{
+        width:100%;
+    }
+}
